<resources>
    <string name="app_name">GymTrackr</string>
    <string name="tab_routines">Routines</string>
    <string name="tab_exercises">Exercises</string>
    <string name="action_settings">Settings</string>

    <string name="days_monday">Monday</string>
    <string name="days_tuesday">Tuesday</string>
    <string name="days_wednesday">Wednesday</string>
    <string name="days_thursday">Thursday</string>
    <string name="days_friday">Friday</string>
    <string name="days_saturday">Saturday</string>
    <string name="days_sunday">Sunday</string>
    <string name="days_none">Not set</string>

    <string name="title_add_routine">New routine</string>

    <string name="hint_name">Name</string>
    <string name="label_name">How do you want to call this exercise?</string>
    <string name="hint_series">Series</string>
    <string name="label_series">How many series?</string>
    <string name="hint_repetitions">Reps</string>
    <string name="label_repetitions">How many repetitions?</string>
    <string name="label_day">Day</string>
    <string name="hint_text_routine_name">Routine name</string>
    <string name="assigned_list_empty">At least one exercise be must selected</string>
    <string name="empty_name">Name cannot be empty</string>

    <string name="label_muscle">Choose all the muscle groups involved:</string>
    <string name="muscle_biceps">Biceps</string>
    <string name="muscle_triceps">Triceps</string>
    <string name="muscle_chest">Chest</string>
    <string name="muscle_shoulder">Shoulder</string>
    <string name="muscle_back">Back</string>
    <string name="muscle_legs">Legs</string>
    <string name="muscle_abs">Abs</string>


    <string name="graph_title">Weight over time</string>
    <string name="graph_axisY">Weight (in kg)</string>
    <string name="graph_axisX">Date</string>

    <string name="toast_name_changed">The exercise name has been successfully updated!</string>

    <string name="label_exercise_name">Exercise name:</string>
    <string name="label_exercise_series">Series:</string>
    <string name="label_exercise_repetitions">Repetitions:</string>
    <string name="label_exercise_muscles">Muscle groups involved:</string>

    <string name="button_delete">Delete</string>
    <string name="action_start_routine">Start Routine</string>
    <string name="action_assign_exercise">Assign exercise</string>

    <string name="label_assigned_exercises">Assigned exercises:</string>

    <string name="dialog_message_exercise">Are you sure you want to delete this exercise?</string>
    <string name="dialog_title_exercise">Delete</string>
    <string name="action_done">Done</string>
    <string name="activity_new_exercise">New exercise</string>
    <string name="label_no_data">No data stored</string>
    <string name="label_weight">Weight:</string>
    <string name="repeteated_routine_name">Already exists a routine with the same name</string>
    <string name="repeteated_exercise_name">Already exists an exercise with the same name</string>

</resources>
