<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignExercisesActivity">

    <LinearLayout
        android:id="@+id/newRoutineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/etRoutineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                android:textSize="@dimen/font_size_big"
                android:text="@string/hint_text_routine_name" />

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/ivDelete"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_alignBottom="@id/etRoutineName"
                android:src="@drawable/ic_action_edit"/>

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/etRoutineName"
                android:src="@drawable/ic_action_delete"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_day"/>

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assignedExercisesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/newRoutineLayout"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewStartRoutine"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_action_workout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/action_start_routine"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/black" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAssignExercise"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_action_link"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/action_assign_exercise"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/black" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/label_assigned_exercises"/>

        <include layout="@layout/fragment_recycler_view" />

    </LinearLayout>

</RelativeLayout>